# cloudpose

./: .gitignore  README.md  connect.sh  go.mod  main.go  terraform.tf
ProcessingCapture/: Helpers.pde  Person.pde  ProcessingCapture.pde
wrapper/: .gitignore  CMakeLists.txt  README.md  main.cpp  wrapper.cpp  wrapper.go  wrapper.h
